fixed the overflow

--- a/src/styles/partials/_mainPage.scss
+++ b/src/styles/partials/_mainPage.scss
@@ -1,6 +1,5 @@
 .mainpage {
     width: 100%;
-    overflow: hidden;
 
     .grid {
         display: grid;
